Ignore order when parsing inset and color for box-shadow

According to the spec [1], box-shadow should allow the inset keyword and
a color in any order. Our implementation allowed only 2 out of the 4
possible orders; fix our parsing to match the spec.

[1]: https://drafts.csswg.org/css-backgrounds/#typedef-shadow

Bug: 811083
Change-Id: I54c3d15c177702624994c45044b446fd82fc9d98
Reviewed-on: https://chromium-review.googlesource.com/911994
Commit-Queue: Chris Nardi <cnardi@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536270}